--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 id="score">0</h1>
     <div id="gameover">
-        <h2>Game Over :(</h2>
+        <h2 style="font-family:Arial;">Game Over!</h2>
         <button onclick="newGame()">New game</button>
     </div>
 </body>
